Working with Jupyter Notebook

--- a/10.MachineLearning/VidSales.ipynb
+++ b/10.MachineLearning/VidSales.ipynb
@@ -277,62 +277,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "68f15cf3",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16327.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "      <td>16598.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8300.605254</td>\n",
+       "      <td>2006.406443</td>\n",
+       "      <td>0.264667</td>\n",
+       "      <td>0.146652</td>\n",
+       "      <td>0.077782</td>\n",
+       "      <td>0.048063</td>\n",
+       "      <td>0.537441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>4791.853933</td>\n",
+       "      <td>5.828981</td>\n",
+       "      <td>0.816683</td>\n",
+       "      <td>0.505351</td>\n",
+       "      <td>0.309291</td>\n",
+       "      <td>0.188588</td>\n",
+       "      <td>1.555028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1980.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.010000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4151.250000</td>\n",
+       "      <td>2003.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.060000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>8300.500000</td>\n",
+       "      <td>2007.000000</td>\n",
+       "      <td>0.080000</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.010000</td>\n",
+       "      <td>0.170000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>12449.750000</td>\n",
+       "      <td>2010.000000</td>\n",
+       "      <td>0.240000</td>\n",
+       "      <td>0.110000</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.040000</td>\n",
+       "      <td>0.470000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>16600.000000</td>\n",
+       "      <td>2020.000000</td>\n",
+       "      <td>41.490000</td>\n",
+       "      <td>29.020000</td>\n",
+       "      <td>10.220000</td>\n",
+       "      <td>10.570000</td>\n",
+       "      <td>82.740000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<bound method NDFrame.describe of         Rank                                              Name Platform  \\\n",
-       "0          1                                        Wii Sports      Wii   \n",
-       "1          2                                 Super Mario Bros.      NES   \n",
-       "2          3                                    Mario Kart Wii      Wii   \n",
-       "3          4                                 Wii Sports Resort      Wii   \n",
-       "4          5                          Pokemon Red/Pokemon Blue       GB   \n",
-       "...      ...                                               ...      ...   \n",
-       "16593  16596                Woody Woodpecker in Crazy Castle 5      GBA   \n",
-       "16594  16597                     Men in Black II: Alien Escape       GC   \n",
-       "16595  16598  SCORE International Baja 1000: The Official Game      PS2   \n",
-       "16596  16599                                        Know How 2       DS   \n",
-       "16597  16600                                  Spirits & Spells      GBA   \n",
+       "               Rank          Year      NA_Sales      EU_Sales      JP_Sales  \\\n",
+       "count  16598.000000  16327.000000  16598.000000  16598.000000  16598.000000   \n",
+       "mean    8300.605254   2006.406443      0.264667      0.146652      0.077782   \n",
+       "std     4791.853933      5.828981      0.816683      0.505351      0.309291   \n",
+       "min        1.000000   1980.000000      0.000000      0.000000      0.000000   \n",
+       "25%     4151.250000   2003.000000      0.000000      0.000000      0.000000   \n",
+       "50%     8300.500000   2007.000000      0.080000      0.020000      0.000000   \n",
+       "75%    12449.750000   2010.000000      0.240000      0.110000      0.040000   \n",
+       "max    16600.000000   2020.000000     41.490000     29.020000     10.220000   \n",
        "\n",
-       "         Year         Genre   Publisher  NA_Sales  EU_Sales  JP_Sales  \\\n",
-       "0      2006.0        Sports    Nintendo     41.49     29.02      3.77   \n",
-       "1      1985.0      Platform    Nintendo     29.08      3.58      6.81   \n",
-       "2      2008.0        Racing    Nintendo     15.85     12.88      3.79   \n",
-       "3      2009.0        Sports    Nintendo     15.75     11.01      3.28   \n",
-       "4      1996.0  Role-Playing    Nintendo     11.27      8.89     10.22   \n",
-       "...       ...           ...         ...       ...       ...       ...   \n",
-       "16593  2002.0      Platform       Kemco      0.01      0.00      0.00   \n",
-       "16594  2003.0       Shooter  Infogrames      0.01      0.00      0.00   \n",
-       "16595  2008.0        Racing  Activision      0.00      0.00      0.00   \n",
-       "16596  2010.0        Puzzle    7G//AMES      0.00      0.01      0.00   \n",
-       "16597  2003.0      Platform     Wanadoo      0.01      0.00      0.00   \n",
-       "\n",
-       "       Other_Sales  Global_Sales  \n",
-       "0             8.46         82.74  \n",
-       "1             0.77         40.24  \n",
-       "2             3.31         35.82  \n",
-       "3             2.96         33.00  \n",
-       "4             1.00         31.37  \n",
-       "...            ...           ...  \n",
-       "16593         0.00          0.01  \n",
-       "16594         0.00          0.01  \n",
-       "16595         0.00          0.01  \n",
-       "16596         0.00          0.01  \n",
-       "16597         0.00          0.01  \n",
-       "\n",
-       "[16598 rows x 11 columns]>"
+       "        Other_Sales  Global_Sales  \n",
+       "count  16598.000000  16598.000000  \n",
+       "mean       0.048063      0.537441  \n",
+       "std        0.188588      1.555028  \n",
+       "min        0.000000      0.010000  \n",
+       "25%        0.000000      0.060000  \n",
+       "50%        0.010000      0.170000  \n",
+       "75%        0.040000      0.470000  \n",
+       "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe"
+    "df.describe()"
    ]
   },
   {
