Working with Jupyter Notebook

--- a/10.MachineLearning/VidSales.ipynb
+++ b/10.MachineLearning/VidSales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "ba2df9be",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "[16598 rows x 11 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "62868945",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
        "(16598, 11)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,9 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "68f15cf3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -418,7 +420,7 @@
        "max       10.570000     82.740000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,19 +431,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "de8d851b",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8ffefad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 'Wii Sports', 'Wii', ..., 3.77, 8.46, 82.74],\n",
+       "       [2, 'Super Mario Bros.', 'NES', ..., 6.81, 0.77, 40.24],\n",
+       "       [3, 'Mario Kart Wii', 'Wii', ..., 3.79, 3.31, 35.82],\n",
+       "       ...,\n",
+       "       [16598, 'SCORE International Baja 1000: The Official Game', 'PS2',\n",
+       "        ..., 0.0, 0.0, 0.01],\n",
+       "       [16599, 'Know How 2', 'DS', ..., 0.0, 0.0, 0.01],\n",
+       "       [16600, 'Spirits & Spells', 'GBA', ..., 0.0, 0.0, 0.01]],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.values"
+   ]
   }
  ],
  "metadata": {
