Music Model Jupyter Notebook

--- a/10.MachineLearning/Music.ipynb
+++ b/10.MachineLearning/Music.ipynb
@@ -2,42 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "9b3e80c2",
+   "execution_count": 19,
+   "id": "0d8a2efc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0        HipHop\n",
-       "1        HipHop\n",
-       "2        HipHop\n",
-       "3          Jazz\n",
-       "4          Jazz\n",
-       "5          Jazz\n",
-       "6     Classical\n",
-       "7     Classical\n",
-       "8     Classical\n",
-       "9         Dance\n",
-       "10        Dance\n",
-       "11        Dance\n",
-       "12     Acoustic\n",
-       "13     Acoustic\n",
-       "14     Acoustic\n",
-       "15    Classical\n",
-       "16    Classical\n",
-       "17    Classical\n",
-       "Name: genre, dtype: object"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-fd6b2cf2b8b4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtree\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDecisionTreeClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmusic_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'music.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# music_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
     "music_data = pd.read_csv('music.csv')\n",
     "# music_data\n",
     "X = music_data.drop(columns=['genre'])\n",
@@ -48,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "33fa3e25",
+   "id": "6d9bb939",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33333d9e",
+   "id": "5e9677c5",
    "metadata": {},
    "outputs": [],
    "source": []
