--- a/10.MachineLearning/Music.ipynb
+++ b/10.MachineLearning/Music.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "0d8a2efc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "array(['HipHop', 'Dance'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28,7 +28,8 @@
     "\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X,Y)\n",
-    "model.predict([[21, 1], [22, 0]])"
+    "predictions = model.predict([[21, 1], [22, 0]])\n",
+    "predictions"
    ]
   },
   {
@@ -228,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ea66bc",
+   "id": "cabaa8b6",
    "metadata": {},
    "outputs": [],
    "source": []
