--- a/10.MachineLearning/Music.ipynb
+++ b/10.MachineLearning/Music.ipynb
@@ -2,24 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "0d8a2efc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['HipHop', 'Dance'], dtype=object)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction 1: HipHop\n",
+      "Prediction 2: Dance\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.modle_selection import train_test_split\n",
     "\n",
     "music_data = pd.read_csv('music.csv')\n",
     "# music_data\n",
@@ -28,13 +27,17 @@
     "\n",
     "model = DecisionTreeClassifier()\n",
     "model.fit(X,Y)\n",
+    "\n",
+    "X_train, Xtrain_test_split(X, Y, test_size=0.2)\n",
+    "\n",
     "predictions = model.predict([[21, 1], [22, 0]])\n",
-    "predictions"
+    "# print(\"Prediction 1:\", predictions[0])\n",
+    "# print(\"Prediction 2:\", predictions[1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "6d9bb939",
    "metadata": {},
    "outputs": [
@@ -52,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "5e9677c5",
    "metadata": {},
    "outputs": [
@@ -217,7 +220,7 @@
        "17   35       0  Classical"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +232,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cabaa8b6",
+   "id": "6feac206",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb8f9f7f",
    "metadata": {},
    "outputs": [],
    "source": []
